<resources>
    <string name="app_name">Napkeen</string>

    <!-- Strings related to Main Activity -->
    <string name="deskripsi_welcomepage">Napkeen membantu anda menemukan tempat makan yang ingin anda kunjungi di sekitar Bandung. Temukan tempat makan favoritmu disini!</string>
    <string name="selamat_datang_di_napkeen">Selamat Datang di Napkeen!</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="masuk">masuk</string>
    <string name="daftar_disini">Daftar</string>

    <string name="title_activity_login">Masuk</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_nama">Nama</string>
    <string name="prompt_nama_restoran">Nama Restoran</string>
    <string name="prompt_password">Kata sandi</string>
    <string name="kotarestoran">Kota Restoran</string>
    <string name="nomorteleponrestoran">Nomor Telepon</string>
    <string name="action_sign_up">Daftar</string>
    <string name="action_sign_in_short">Sign</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">"Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_label1">Restoran</string>
    <string name="tab_label2">Cafe</string>
    <string name="tab_label3">Bar</string>
    <string name="label4">Dessert</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu_drawer">MenuDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>


    <string name="title_activity_signup">Daftar</string>
    <string name="action_sign_in">Sign In</string>
    <string name="email_signup">Email</string>
    <string name="masukdenganfacebook">LANJUTKAN DENGAN FACEBOOK</string>
    <string name="masukdengangoogle">LANJUTKAN DENGAN GOOGLE</string>
    <string name="kebijakansignup">Dengan membuat akun, maka anda menyetujui persyaratan kebijakan privasi layanan dan kebijakan konten</string>
    <string name="title_activity_detail_restoran">detail_restoran</string>


    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="deskripsi_napkeen_tentang">Napkeen membantu anda menemukan tempat makan yang ingin anda kunjungi di sekitar Bandung. Napkeen membantumu mencari tahu info tentang tempat makan yang kamu sukai dan tempat makan rekomendasi dari user lainnya. Temukan tempat makan favoritmu disini!</string>

    <string-array name="spinner_location">
        <item>Sukapura</item>
        <item>Sukabirus</item>
        <item>Mengger Hilir</item>
        <item>Ciganitri</item>
        <item>Lengkong</item>
        <item>Babakan Radio</item>
        <item>PGA</item>
        <item>Cikoneng</item>
        <item>Cijagra</item>
        <item>Radio Palasari</item>
        <item>Adhyaksa</item>
    </string-array>
</resources>
