<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.imadedwimagitadirtana_1202150054_si3906.napkeen.LoginActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:inputType="text"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_below="@+id/password"
        android:text="@string/login"
        android:layout_marginTop="35dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:text="or"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:id="@+id/option" />


    <com.facebook.login.widget.LoginButton
        android:id="@+id/fb_btn"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/option"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp" />
    <com.google.android.gms.common.SignInButton
        android:id="@+id/gg_btn"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fb_btn"
        android:layout_alignStart="@+id/fb_btn"
        android:layout_below="@+id/fb_btn" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/gg_btn"
        android:layout_alignStart="@+id/gg_btn"
        android:layout_alignTop="@+id/username"
        android:layout_gravity="center|bottom"
        android:layout_marginLeft="54dp"
        android:layout_marginStart="54dp"
        android:visibility="gone" />

</RelativeLayout>
